# C.H.A.R.L.I.E

./: .env.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  LICENSE  MEMORY.example.md  OPINIONS.example.md  OPINIONS.md  PHASE_PLAN.md  PHASE_PLAN_PART2.md  README.md  REMOVED_FEATURES.md  SOUL.example.md  SOUL.md  USER.example.md  USER.md  USER.md.example  _smoke_profile.py  build.py  charlie-daemon.py  charlie-research-upgrade-plan.md  charlie_soul.md  docker-compose.yml  main.py  mcp_config.json  mcp_config.json.example  pyproject.toml  pytest.ini  requirements.txt  run.py  sessions.db  start-charlie.bat  start-charlie.ps1  start.bat  test_final.py  test_run.py  test_session_store.py  (+3 more)
.commandcode/taste/: taste.md
.github/workflows/: ci.yml  test.yml
.playwright-mcp/: page-2026-06-06T16-59-31-416Z.yml  page-2026-06-06T17-03-36-247Z.yml  page-2026-06-06T17-24-01-354Z.yml  page-2026-06-06T17-25-32-231Z.yml  page-2026-06-06T18-30-25-996Z.yml  page-2026-06-06T18-32-31-891Z.yml  page-2026-06-06T18-36-31-737Z.yml  page-2026-06-06T18-36-38-468Z.yml  page-2026-06-06T18-39-02-639Z.yml
SearXNG/: docker-compose.yml  settings.yml
charlie/: __init__.py  asr_worker.py  audio_analysis.py  audio_proc.py  blackboard.py  bridge.py  buddy.py  budget.py  charlie.onnx  cli.py  config.py  core.py  dashboard.py  discovery.py  embedder.py  ipc.py  llm_router.py  mcp_client.py  memory_graph.py  memory_manager.py  memory_store.py  memory_v2.py  personality.py  pipeline_instrumentation.py  platform.py  plugins.py  proactive_remark.py  profile_manager.py  recovery.py  recovery_cache.py  reflection.py  research.py  research_memory.py  screen_context.py  session_store.py  streaming.py  swarm.py  text_utils.py  tools.py  ui_launcher.py  (+6 more)
charlie-buddy/: .gitignore  electron.vite.config.js  package-lock.json  package.json
charlie-buddy/src/: main.js  preload.js
charlie-companion/: index.html  package-lock.json  package.json
charlie-companion/src/: App.tsx
charlie-companion/src-tauri/: Cargo.toml  tauri.conf.json
charlie/agents/: __init__.py  aida.py  base.py  edith.py  friday.py  herbie.py  index.json  jarvis.py  karen.py  vision.py
charlie/audio/: gemini_live.py
charlie/automation/: __init__.py  autonomy_loop.py  clipboard_diagnostician.py  (+7 more)
charlie_memory_db/: chroma.sqlite3
config/: scheduler_state.json
dashboard/: package-lock.json  package.json  tailwind.config.js
docs/: audit-decisions.md  duplicates-explained.md  soul-contract.md  tasker-setup-guide.md
frontend/: CLAUDE.md  README.md  index.html  package-lock.json  package.json
graphify-out/: .graphify_root  GRAPH_REPORT.md  graph.html  graph.json
plans/: PHASE_0_mcp_spike.md  PHASE_1_uia_mvp.md  PHASE_2A_ocr_fallback.md  PHASE_2B_vision_model.md  PHASE_3_dashboard_view.md  PHASE_4_operator_persona.md  PHASE_5_plugin_skill_system.md
tests/: test_agents.py  test_blackboard.py  test_buddy.py  test_chat_stream.py  test_compression.py  test_config_api.py  test_core_extract.py  test_desktop.py  test_event_envelopes.py  test_fastpaths.py  test_integration.py  test_intelligent_assistant.py  test_mcp_client.py  test_memory_graph.py  test_memory_manager.py  test_memory_store.py  test_memory_v2.py  test_personality.py  test_plugins.py  test_recovery.py  test_reflection.py  test_research.py  test_router.py  test_session_store.py  test_strip.py  test_swarm.py  test_swarm_tool.py  test_tool_approval.py  test_tools.py  test_voice.py  test_wake_word.py  test_web_server_facts.py  test_ws_recovery.py  test_ws_sync.py  test_zero_coverage.py
(+325 files in other folders)
