[project]
name = "charlie-sentinel"
version = "0.1.0"
description = "Completely Helpful And Rather Local Intelligent Engine"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "numpy>=1.26.0",
    "sounddevice>=0.4.0",
    "soundfile>=0.12.0",
    "faster-whisper>=1.0.0",
    "kokoro-onnx>=0.4.0",
    "huggingface-hub>=0.20.0",
    "tokenizers>=0.15.0",
    "torch>=2.0.0",
    "ddgs>=9.14.0",
    "beautifulsoup4>=4.12.0",
    "crawl4ai>=0.8.9",
    "markdownify>=1.2.2",
    "onnxruntime>=1.26.0",
    "mcp>=0.1.0",
    "torchaudio>=2.5.1",
    "PySide6>=6.6.0",
    "pynput>=1.7.6",
]

[tool.setuptools.packages.find]
include = ["charlie*"]

[tool.uv]
managed = true

[project.scripts]
charlie = "main:repl"

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio>=0.25.0",
    "pytest-aiohttp==1.1.0",
    "pytest-mock==3.15.1",
    "pytest-timeout==2.4.0",
    "ruff==0.13.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
ignore = [
    "E701",   # multiple statements on one line (colon) — style preference
    "E741",   # ambiguous variable name — used intentionally in math/loops
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cuda" }
torchvision = { index = "pytorch-cuda" }
torchaudio = { index = "pytorch-cuda" }
