[project]
name = "charlie"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ruff>=0.1.0",
    "pytest>=7.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "numpy>=1.26",
    "pyzmq>=25.0",
    "fastapi>=0.110.4",
    "uvicorn>=0.29",
    "hypercorn>=0.14.4",
    "python-multipart>=0.0.9",
    "faster-whisper>=1.0",
    "sounddevice>=0.4",
    "kokoro-onnx>=0.4",
    "chromadb>=0.5.0",
    "sentence-transformers>=2.7.0",
]
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E402"]
